แก้ไข entity controller และ UI ของระบบจองคิวผู้ป่วย - close #269
