# backend/docs/swagger.yaml
@@ -8,6 +8,10 @@ definitions:
         type: integer
       patient:
         type: integer
+      phone:
+        type: string
+      queueID:
+        type: string
       queueTime:
         type: string
     type: object
@@ -380,14 +384,23 @@ definitions:
     type: object
   ent.Patient:
     properties:
-      age:
-        description: Age holds the value of the "age" field.
+      Age:
+        description: Age holds the value of the "Age" field.
         type: integer
-      birthday:
-        description: Birthday holds the value of the "birthday" field.
+      Birthday:
+        description: Birthday holds the value of the "Birthday" field.
         type: string
-      cardID:
-        description: CardID holds the value of the "cardID" field.
+      CardID:
+        description: CardID holds the value of the "CardID" field.
+        type: string
+      Name:
+        description: Name holds the value of the "Name" field.
+        type: string
+      PatientID:
+        description: PatientID holds the value of the "PatientID" field.
+        type: string
+      Tel:
+        description: Tel holds the value of the "Tel" field.
         type: string
       edges:
         $ref: '#/definitions/ent.PatientEdges'
@@ -398,15 +411,6 @@ definitions:
       id:
         description: ID of the ent.
         type: integer
-      name:
-        description: Name holds the value of the "name" field.
-        type: string
-      patient_ID:
-        description: PatientID holds the value of the "patient_ID" field.
-        type: string
-      tel:
-        description: Tel holds the value of the "tel" field.
-        type: string
     type: object
   ent.PatientEdges:
     properties:
@@ -467,8 +471,17 @@ definitions:
     type: object
   ent.Queue:
     properties:
-      dental:
-        description: Dental holds the value of the "dental" field.
+      Dental:
+        description: Dental holds the value of the "Dental" field.
+        type: string
+      Phone:
+        description: Phone holds the value of the "Phone" field.
+        type: string
+      QueueID:
+        description: QueueID holds the value of the "QueueID" field.
+        type: string
+      QueueTime:
+        description: QueueTime holds the value of the "QueueTime" field.
         type: string
       edges:
         $ref: '#/definitions/ent.QueueEdges'
@@ -479,9 +492,6 @@ definitions:
       id:
         description: ID of the ent.
         type: integer
-      queue_time:
-        description: QueueTime holds the value of the "queue_time" field.
-        type: string
     type: object
   ent.QueueEdges:
     properties:
